# MaRDMO-Plugin

./: .gitignore  README.md  environment.yml  prepare_wikibase.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pypi-publish.yml
MaRDMO/: __init__.py  adders.py  apps.py  builders.py  checks.py  citation.py  config.py  constants.py  display.py  export.py  getters.py  handler_base.py  handlers.py  helpers.py  id.py  id_own.py  id_staging.py  id_testwiki.py  imports.py  main.py  mathmoddb.py  models.py  oauth2.py  para.py  payload.py  providers.py  queries.py  router.py  rules.py  sparql.py  store.py  urls.py  utils.py  views.py
MaRDMO/algorithm/: checks.py  constants.py  handlers.py  models.py  providers.py  sparql.py  utils.py  worker.py
MaRDMO/data/: inversePropertyMapping.json  items.json  items_staging.json  lang.json  mathmoddb.json  modus.json  msc2020.json  options.json  properties.json  properties_staging.json  questions.json
MaRDMO/model/: checks.py  constants.py  handlers.py  models.py  providers.py  sparql.py  (+2 more)
catalog/: conditions.xml  domains.xml  options.xml  questions.xml
func/: __init__.py  citation.py  config_empty.py  display.py  export.py  id.py  para.py  setup.py  sparql.py
kg/: MaRDI_RDMO.owl
rdmo-app/: .gitignore  NOTICE  README.md  pyproject.toml
templates/: error1.html  error10.html  error11.html  error12.html  error14.html  error14a.html  error15.html  error16.html  error17.html  error18.html  error2.html  error20.html  error21.html  error3.html  error4.html  error5.html  error6.html  error7.html  export.html
(+127 files in other folders)
