[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MaRDMO"
version = "0.4.0"
description = "RDMO Plugin to document and query mathematical research data using the MaRDI infrastructure."
readme = "README.md"
authors = [{name = "Marco Reidelbach", email = "reidelbach@zib.de"}]
maintainers = [{name = "Marco Reidelbach", email = "reidelbach@zib.de"}]
license = {text = "Apache Software License"}
requires-python = ">=3.10"

dependencies = [
    "rdmo>=2.4.0"
]

classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10"
]


[project.urls]
homepage = "https://github.com/MarcoReidelbach/MaRDMO"

[tool.setuptools.packages.find]
where = ["."]
include = ["MaRDMO*"]

[tool.setuptools.package-data]
"MaRDMO" = ["templates/MaRDMO/*.html", "data/*.json", "static/MaRDMO/images/*.png", "static/MaRDMO/js/**/*", "algorithm/data/*.json", "model/data/*.json", "publication/data/*.json", "search/data/*.json", "workflow/data/*.json", "model/queries/*.sparql", "algorithm/queries/*.sparql", "publication/queries/*.sparql", "workflow/queries/*.sparql"]

[project.optional-dependencies]
# Add optional dependencies here if needed

